# ad-training-01-03-2025

./: .gitignore  README.md  check.py  forcad.yml
checkers/: requirements.txt
checkers/FileStorage/: checker.py
checkers/bimba/: bimba_lib.py  checker.py
checkers/example/: checker.py
checkers/magazinchik/: checker.py
checkers/rce-as-a-service/: checker.py  executable_checks.py  raas_lib.py
checkers/shpagodrach/: ch.py  checker.py  choco.py  not_debug.py
internal/magazinchik/: magazinchik.cpp
internal/shpagodrach/: build.sh  main.c  vtable_lib.c
services/: docker-compose.yml
services/FileStorage/: db.db  db.py  docker-compose.yml  main.py
services/bimba/: Dockerfile  Main.java  docker-compose.yaml  docker-compose.yml  hui.docx
services/magazinchik/: Dockerfile  Makefile  TODO  docker-compose.yml  magazinchik  magazinchik.cpp
services/rce-as-a-service/: .gitignore  Cargo.toml  Dockerfile  compose.yaml
services/rce-as-a-service/.sqlx/: query-2a8c7b2eaf1659a7d11731e693ebdfe10393b0e0dd14a3b9350b2c92abc5611f.json  query-515b57f9d833c089be3475ada1b16843c018468b8fd4b49dd27f77337f7ee909.json  query-c936f44864dafe4660a736babd5f93050b7d35c66c0fe0c86f7b2dcdb7a1e3eb.json
services/rce-as-a-service/cleaner/: Dockerfile  cleaner.sh
services/rce-as-a-service/db/: init.sql
services/rce-as-a-service/frontend/: app.js  index.html  styles.css
services/rce-as-a-service/s3/: Dockerfile
services/rce-as-a-service/src/: auth.rs  cleaner.rs  main.rs  routes.rs  sandbox.rs  storage.rs
services/shpagodrach/: README.md  chall  docker-compose.yml  main.c  (+2 more)
(+142 files in other folders)
