[package]
name = "rce-as-a-service"
version = "0.1.0"
edition = "2021"

[dependencies]
base64 = "0.22.1"
rocket = { version = "0.5.1", features = ["json", "secrets"] }
rust-s3 = { version = "0.35.1", features = ["tokio"] }
serde = "1.0.217"
sqlx = { version = "0.8.3", features = ["postgres", "runtime-tokio"] }
tmpdir = "1.0.0"
tokio = "1.43.0"
wasmtime = "29.0.1"
wasmtime-wasi = "29.0.1"
